@@ -1,0 +1,23 @@
+some infos about all stuff around gaming
+========================================
+
+SDL
+---
+
+Pixel in System-RAM -> surface
+Pixel in Video-RAM  -> texture
+
+
+Links SDL
+---------
+
+http://www.sdltutorials.com/
+http://lazyfoo.net/tutorials/SDL/index.php
+http://www.willusher.io/pages/sdl2/
+
+
+Videos SDL
+----------
+
+https://www.youtube.com/watch?v=Sd8ie5R4CVE
+https://www.youtube.com/watch?v=MeMPCSqQ-34
